<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_color"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/about_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/gpl_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ivGPL"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/gpl_logo_description_text"
        android:src="@drawable/gpl" />

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/view_source"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>